# diffusion-examples

c/: CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  connect-with-user-context.c  reconnect.c  session-factory.c
c/cmake/: APR.cmake  CMocka.cmake  Diffusion.cmake  OperatingSystem.cmake  PCRE.cmake  ZLib.cmake
c/examples/: examples.cmake  main.c
c/examples/client_control/: change_roles_via_session_filter.c  change_roles_via_session_id.c  close_client_via_session_filter.c  close_client_via_session_id.c  get_session_properties_via_session_id.c  queue_conflation_via_session_filter.c  set_session_properties_via_session_filter.c  set_session_properties_via_session_id.c
c/examples/connection/: session_state_listener.c
c/examples/connection/establishment/: accept_all_certificates.c  accept_specific_certificate.c  connect_async.c  connect_sync.c  connect_sync_with_context.c  connect_via_factory.c
c/examples/connection/resilience/: reconnection_strategy.c  session_establishment_retry_mechanism.c
c/examples/messaging/: send_to_path.c  send_to_session_filter.c  send_to_session_id.c
c/examples/monitoring/: missing_topic_notifications.c  session_properties_listener.c  topic_notifications.c
c/examples/ping/: ping_server.c
c/examples/pub_sub/fetch/: topic_properties.c  topic_via_paging.c
c/examples/pub_sub/json_patch/: add.c  copy.c  move.c  remove.c  replace.c  test.c
c/examples/pub_sub/publish/: add_and_set_topic.c  add_and_set_topic_via_update_stream.c  add_topic.c  add_topic_custom_properties.c  set_topic.c  set_topic_via_update_stream.c
c/examples/pub_sub/remove/: automatic_topic_removal.c  multiple_topics_via_selector.c  single_topic_via_path.c
c/examples/pub_sub/subscribe/: cross_compatible.c  fallback_stream.c  multiple_topics_via_selector.c  single_topic_via_path.c
c/examples/remote_servers/: check.c  create_primary_initiator.c  create_secondary_acceptor.c  create_secondary_initiator.c  list.c  remove.c
c/examples/security/: change_principal.c  get_global_permissions.c  get_path_permissions.c
c/examples/server_configuration/metrics/: session_metric_collector_list.c  session_metric_collector_put.c  (+4 more)
c/examples/session_management/: authentication_control.c  subscription_control.c
c/examples/time_series/: append_user_supplied_timestamp.c  append_value.c  append_value_via_update_stream.c  create_topic.c  edit_value.c  range_query.c  subscribe.c  subscribe_cross_compatible.c
c/examples/utils/: regexp9.c  regexp9.h  utils.c  utils.h
c/features/authentication_control/: auth-service.c
c/features/client_control/: change-roles-with-filter.c  change-roles-with-session.c  close-with-filter.c  get-session-properties.c  session-properties-listener.c
c/features/messaging/: send-request-to-filter.c  send-request-to-path.c  send-request-to-session.c
c/features/remote_servers/: remote-servers.c
c/features/security/: change-principal.c
c/features/subscription_control/: subscription-control.c
c/features/system_authentication_control/: system-auth-control.c
c/features/time_series/: time-series-append.c  time-series-edit.c  time-series-range-query.c
c/features/topic_control/: add-topics.c  missing-topic-notification.c
c/features/topic_update/: topic-update-add-and-set.c  topic-update-stream.c  topic-update-with-constraint.c  topic-update-with-value-comparison-constraint.c  topic-update.c  update-record.c
c/features/topic_views/: topic-views-get.c  topic-views-list.c  topic-views-remove.c  topic-views.c
c/features/topics/: binary-topics.c  double-topics.c  fetch-request.c  int64-topics.c  recordv2-topics.c  string-topics.c  subscribe-multiple.c  subscribe.c
c/resources/: DiffusionData_CA.crt
dotnet/: README.md  (+1 more)
python/examples/: README.md  conftest.py  pyproject.toml
python/examples/messaging/: message_to_message_path.py  message_to_session_filter.py  message_to_session_id.py
python/examples/ping/: ping_server.py
python/examples/time_series/: append_to_time_series_topic.py  append_to_time_series_topic_with_user_supplied_timestamp.py  create_time_series_topic.py  edit_time_series_topic.py  range_query_a_time_series_topic.py  subscribe_to_time_series_topics.py  time_series_cross_compatible_datatypes.py
python/examples/utils/: program.py
(+1051 files in other folders)
